plugins/fictions/squelettes/css/spip.css
/* ... */
.forum_bt {
	margin: 0px 30px 30px 60px;
	width: 475px;
	background-color: #556270;
	border-radius: 5px;
	padding: 23px 18px 23px 25px;
	color: #FFF;
	font-family: Arial, Helvetica, sans-serif;
	float: left;
	font-size: 12px;
	background-image: url(../img/ecriture/forum-fond-pastille.png);
	background-repeat: no-repeat;
	background-position: 460px 15px;
}

.forum_bt:hover {
	background-color: #66717e;
}

.forum-titre {
	font-size: 16px;
	font-weight: bold;
	float: left;
	padding-top: 5px;
}

.forum-nb-message {
	float: right;
	font-size: 15px;
	font-weight: bold;
	padding: 3px 0px 0px 0px;
	text-align: center;
	width: 38px;
}

#ecriture-en-cours {
	float: left;
	clear: both;
	margin: 20px 0px 20px 0px;
}

.ecriture-wip-bloc {
	width: 220px;
	float: left;
	position: relative;
}

.ecriture-wip-bloc a {
	display: block;
	width: 110px;
	color: #FFF;
	border-radius: 4px 4px 4px 4px;
	behavior: url(../js/PIE.php);
	margin-bottom: 5px;
	padding: 10px 60px 10px 50px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	position: relative;
}

.ecriture-wip-bloc a:hover {
	color: #000;
}

.ecriture-wip-bloc.strong a {
	background-color: #ff6b6b;
	background-image: url(../img/global/liste-crayon.png);
	background-repeat: no-repeat;
	background-position: 8px 8px;
}

.ecriture-wip-bloc.light a {
	background-color: #ffc4c4;
	background-image: url(../img/global/liste-oeil.png);
	background-repeat: no-repeat;
	background-position: 12px 16px;
}

.ecriture-wip-forum {
	position: absolute;
	top: 10px;
	right: 10px;
	width: 32px;
	height: 32px;
	text-align: center;
	padding: 8px 0px 0px 0px;
	color: #FFF;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	font-weight: bold;
	background-image: url(../img/global/wip-pastille.png);
	background-repeat: no-repeat;
}

#ecriture-liste {
	float: left;
}

#ecriture-navigation {
	position: absolute;
	right: 10px;
	text-align: right;
	z-index: 9020;
	top: 130px;
}

#ecriture-navigation a {
	float: right;
	clear: both;
	padding: 5px 12px 5px 12px;
	background-color: #22272c;
	background-color: rgba(0, 0, 0, 0.6);
	z-index: 10;
	margin: 0px 0px 3px 0px;
	border-radius: 20px 20px 20px;
	behavior: url(../js/PIE.php);
	color: #FFF;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
	text-align: center;
	display: block;
}

#ecriture-navigation a:hover {
	background-color: #000;
	background-color: rgba(0, 0, 0, 1);
}

.ecriture-edition {
	border: 1px solid #F00;
	padding: 10px;
	margin: 20px 0px 10px 60px;
	width: 497px;
	min-height: 380px;
}

/* PAGE TYPE */

#page-type {
	padding: 50px 0px 0px 90px;
}

.page-type-titre {
	width: 100%;
	float: left;
	clear: both;
	font-family: "Arial Black", Gadget, sans-serif;
	font-size: 22px;
	margin: 0px 0px 0px 0px;
	text-transform: uppercase;
	line-height: 25px;
	color: #FF6B6B;
}

.page-type-texte {
	float: left;
	font-size: 12px;
	font-family: Arial, Helvetica, sans-serif;
	line-height: 17px;
	margin-top: 20px;
}

.page-type-texte p {
	padding: 0px 30px 0px 0px;
	margin-bottom: 10px;
}

/* -------------------- */
/* FORUM */
/* -------------------- */

#forum {
	position: relative;
	overflow: auto;
	width: 730px;
	height: 100%;
	font-family: Arial, Helvetica, sans-serif;
	color: #FFF;
	background-color: #AAB0B7;
}

#forum-lecture {
	position: relative;
	overflow: auto;
	width: 730px;
	height: 100%;
	font-family: Arial, Helvetica, sans-serif;
	color: #FFF;
	background-color: #77818d;
}

#forum hr {
	border-color: #9fa6ae;
}

#forum-inner {
	width: 730px;
	background-color: #77818d;
}

.forum-inner-titre {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 16px;
	color: #FFF;
	font-weight: bold;
	float: left;
	margin: 20px 20px 20px 40px;
	width: 660px;
	text-align: left;
}

.forum-img-profil {
	float: left;
	width: 42px;
	height: 42px;
	margin: 0px 15px 0px 40px;
}

.forum-texte {
	float: left;
	width: 590px;
	text-align: left;
	font-size: 13px;
	line-height: 20px;
	margin: 0px 0px 10px 0px;
}

.forum-reponse {
	float: left;
	width: 600px;
	margin: 10px 0px 10px 98px;
	text-align: left;
	font-size: 13px;
	line-height: 20px;
	border-left: 5px solid #556270;
}

.forum-reponse-img {
	width: 42px;
	height: 42px;
	float: left;
	margin: 0px 15px 0px 10px;
}

.forum-reponse-texte {
	float: left;
	width: 500px;
}

.forum-repondre-link {
	float: left;
	text-align: left;
	font-size: 13px;
	color: #FFF;
	line-height: 20px;
	margin: 10px 0px 20px 98px;
}

.forum-repondre-link a {
	color: #FFF;
	text-decoration: underline;
}

.forum-repondre-link a:hover {
	color: #FFF;
	text-decoration: none;
}

.ariaformprop {
	background-color: #aab0b7;
	float: left;
	clear: both;
	width: 400px;
}

.session_qui,
.saisie_qui,
.saisie_titre {
	display: none;
}

.formulaire_spip textarea.markItUpEditor,
.formulaire_spip li.editer_texte textarea {
	width: 620px;
}

.formulaire_forum legend {
	text-align: left;
	font-weight: bold;
}

.formulaire_forum fieldset,
.formulaire_forum p.boutons {
	padding-bottom: 10px;
}

#formulaire_forum {
	margin: 0px 0px 20px 0px;
}

#formulaire_forum .explication {
	display: none;
}

#formulaire_forum .comment-titre {
	display: none;
}


#formulaire_forum li {
	text-align: left;
	list-style-type: none;
	font-size: 13px;
}

#formulaire_forum fieldset {
	width: 600px;
	margin: 0px 0px 0px 40px;
}

.boutons {
	text-align: left;
	margin: 0px 0px 0px 40px;
}

.previsu .boutons {
	margin: 15px 0px 15px 0px;
}

.boutons input[type=submit] {
	font-size: 13px;
	padding: 5px;
	background-color: #47494c;
	border: 0;
	border-radius: 20px 20px 20px 20px;
	color: #FFF;
	position: relative;
}

#forum-no-message {
	float: left;
	clear: both;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 16px;
	color: #FFF;
	float: left;
	margin: 0px 20px 20px 40px;
	width: 660px;
	text-align: left;
	font-style: italic;
}

/* -------------------- */
/* LOGIN */
/* -------------------- */

#login {
	height: 350px;
	width: 330px;
	overflow: auto;
	font-family: Arial, Helvetica, sans-serif;
}
/* ... */

